task UI Fixes, scrollbar fixes, channel fixes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
-  display: none;
+  display: none !important;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
@@ -50,4 +50,23 @@
 .chat-background>* {
   position: relative;
   z-index: 1;
+}
+
+/* Global Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 19px;
+  height: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #131313;
+  border-radius: 12px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  box-shadow: inset 0px 0px 25px 0px #75757540;
+  min-height: 60px;
 }
